# Y2KaoZNetwork.cpp

./: .clang-format  .gitignore  CMakeLists.txt
include/Y2KaoZ/Network/Buffers/: Endian.hpp  JsonBufferReader.hpp  JsonValueReader.hpp  NotEnoughData.hpp  NotEnoughSpace.hpp  ReferenceCounted.hpp  SpanBufferReader.hpp  SpanBufferWriter.hpp  VectBufferWriter.hpp
include/Y2KaoZ/Network/Concepts/: TriviallyCopyableStandardLayout.hpp
include/Y2KaoZ/Network/Protocol/: Concepts.hpp  Header.hpp  Opcode.hpp
include/Y2KaoZ/Network/Protocol/Header/: AnyHeaderT.hpp  BaseHeader.hpp
include/Y2KaoZ/Network/Protocol/Header/BaseHeader/: BodySizePolicyT.hpp  HeaderIdPolicyT.hpp
include/Y2KaoZ/Network/Protocol/Header/BaseHeader/BodySizePolicyT/: BodySize.hpp  NoBodySize.hpp
include/Y2KaoZ/Network/Protocol/Header/BaseHeader/HeaderIdPolicyT/: NoHeaderId.hpp  RandomBytesHeaderId.hpp  RandomIntHeaderId.hpp  UnsignedHeaderId.hpp  UuidHeaderId.hpp
include/Y2KaoZ/Network/Protocol/Opcode/: AnyOpcodeT.hpp  BaseOpcode.hpp
include/Y2KaoZ/Network/Protocol/Opcode/BaseOpcode/: MajorPolicyT.hpp  MinorPolicyT.hpp  OpcodeIdT.hpp
include/Y2KaoZ/Network/Protocol/Opcode/BaseOpcode/MajorPolicyT/: MajorVersion.hpp  NoMajorVersion.hpp
include/Y2KaoZ/Network/Protocol/Opcode/BaseOpcode/MinorPolicyT/: MinorVersion.hpp  NoMinorVersion.hpp
include/Y2KaoZ/Network/Tcp/: Acceptor.hpp
include/Y2KaoZ/Network/Tcp/Http/: AcceptorHandler.hpp  HttpSession.hpp
include/Y2KaoZ/Network/Tcp/Http/WebSocket/: HttpSessionHandler.hpp  WebSocketRouter.hpp  WebSocketSession.hpp  WebSocketSessions.hpp
src/Y2KaoZ/Network/Buffers/: JsonBufferReader.cpp  JsonValueReader.cpp  NotEnoughData.cpp  NotEnoughSpace.cpp  ReferenceCounted.cpp  SpanBufferReader.cpp  SpanBufferWriter.cpp  VectBufferWriter.cpp
src/Y2KaoZ/Network/Tcp/: Acceptor.cpp
src/Y2KaoZ/Network/Tcp/Http/: AcceptorHandler.cpp  HttpSession.cpp
src/Y2KaoZ/Network/Tcp/Http/WebSocket/: HttpSessionHandler.cpp  WebSocketRouter.cpp  WebSocketSession.cpp  WebSocketSessions.cpp
tests/: CMakeLists.txt
tests/Y2KaoZ/: CMakeLists.txt
tests/Y2KaoZ/Network/: CMakeLists.txt
tests/Y2KaoZ/Network/Buffers/: CMakeLists.txt  Endian.cpp
tests/Y2KaoZ/Network/Protocol/: CMakeLists.txt
tests/Y2KaoZ/Network/Protocol/Header/: BaseHeader.cpp  BodySizePolicyT.cpp  CMakeLists.txt  HeaderIdPolicyT.cpp
tests/Y2KaoZ/Network/Protocol/Opcode/: BaseOpcode.cpp  CMakeLists.txt  MajorPolicyT.cpp  MinorPolicyT.cpp
